--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body {
   background-color: transparent;
   transition: background-color 0.5s ease;
   z-index: 1030;
+  position: fixed;
+  width: 100%;
 }
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-nav .nav-link {
@@ -31,7 +33,7 @@ body {
   transition: width 0.3s;
 }
 .navbar-custom.scrolled {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #2a092e;
 }
 
 .image-section {
@@ -198,4 +200,57 @@ body {
 
 .contact-page .btn-primary:hover {
   background-color: #993299;
+}
+
+/* Slide-in animation */
+@keyframes slideIn {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.image-section h1,
+.image-section button,
+.image-section p {
+  animation: slideIn 10s;
+}
+
+/* Slide-up animation */
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.card,
+.text-center,
+.footer {
+  animation: slideUp 2s;
+  animation-fill-mode: backwards;
+}
+
+/* Zoom-in animation */
+@keyframes zoomIn {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.carousel-inner,
+.contact-page {
+  animation: zoomIn 2s;
+  animation-fill-mode: backwards;
 }
